--- a/src/TODO.org
+++ b/src/TODO.org
@@ -12,7 +12,7 @@
 ** TODO Gripper
 
 * [9/12] Simulator
-** DONE Khepera IV entity
+** DONE Turtlebot 3 entity
 ** DONE QtOpenGL model
 ** DONE Dynamics2D model
 ** DONE RGB LED Actuator
